# Yggdrasil-rendering-engine

./: CMakeLists.txt
demo/: CMakeLists.txt  main.cpp
demo/shaders/: fShader2.glsl
engine/: CMakeLists.txt
engine/include/utils/: camera.hpp  shader.hpp
engine/include/ygg/: engine.hpp
engine/src/: engine.cpp
include/: engine.hpp  precision.hpp
include/glad/: glad.h
include/utils/: shader.hpp
shaders/: fShader.glsl  fshader2.glsl  vShader.glsl
src/: engine.cpp  glad.c  main.cpp
